--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,6 @@
+@import './colors.scss';
+@import './navigation.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
