--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -1,8 +1,110 @@
 @import './colors.scss';
 
-.navigation{
+// .navigation{
+//     background-color: $color-nav-background;
+//     min-height: 50px;
+//     font-size: calc(10px + 2vmin);
+//     color: $black;
+// }
+
+// this is the website which I found resources to develop the navbar - https://blog.logrocket.com/create-responsive-navbar-react-css/
+.navigation {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding: 0.5rem 0rem;
     background-color: $color-nav-background;
-    min-height: 50px;
-    font-size: calc(10px + 2vmin);
     color: $black;
+    margin-bottom: 10px;
+
+    .brand-name {
+        text-decoration: none;
+        color: $black;
+        font-size: 1.3rem;
+        margin-left: 1rem;
+        font-weight: bold;
+    }
+    .navigation-menu {
+        margin-left: auto;
+    }
+    .navigation-menu ul {
+        display: flex;
+        padding: 0;
+    }
+    .navigation-menu li {
+        list-style-type: none;
+        margin: 0 1rem;
+    }
+    .navigation-menu li a {
+        text-decoration: none;
+        display: block;
+        width: 100%;
+        color: $black;
+        font-weight: 600;
+    }
+
+    .hamburger {
+        border: 0;
+        height: 40px;
+        width: 40px;
+        padding: 0.5rem;
+        border-radius: 50%;
+        background-color: #283b8b;
+        cursor: pointer;
+        transition: background-color 0.2s ease-in-out;
+        position: absolute;
+        top: 50%;
+        right: 25px;
+        transform: translateY(-50%);
+        display: none;
+    }
+    .hamburger:hover {
+        background-color: #2642af;
+    }
+
+    @media screen and (max-width: 768px) {
+        .hamburger {
+          display: block;
+        }
+
+        .navigation-menu ul {
+            display: none;
+        }
+
+        .expanded ul {
+            padding: 0;
+            position: absolute;
+            top: 50px;
+            left: 0;
+            // stacks the li tags vertically 
+            flex-direction: column;
+           // makes menu span full height and width
+            width: 100%;
+            height: 135px;
+            background-color: white;
+            display: block;
+        }
+
+        .expanded li {
+            list-style-type: none;
+            margin: 0 1rem;
+            text-align: center;
+            margin: 0;
+        }
+        .expanded li a {
+            color: $black;
+            // increases the surface area of the anchor tag to span the full width of the menu
+            width: 100%;
+            padding: 1.5rem 0;
+            text-decoration: none;
+            display: block;
+            width: 100%;
+            font-weight: 600;
+        }
+        .expanded li:hover {
+            background-color: #eee;
+        }
+    }
 }
