--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,7 +2,8 @@
 @import './navigation.scss';
 
 body {
-  margin: 0;
+  margin: 20px;
+  background-color: $color-nav-background;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
