--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -5,4 +5,5 @@ $wild-blue-yonder: #B0B3D6;
 $white:#FFFFFF;
 $black:#000000;
 
-$color-nav-background: #f1e8e8;
+$color-background: #f1e8e8;
+$color-main-background:#cccff2;
