--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,12 +1,12 @@
 @import './colors.scss';
-@import './navigation.scss';
 
 body {
-  margin: 20px;
-  background-color: $color-nav-background;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin: 0;
+  // background-color: $wild-blue-yonder;
+  background-color: $color-background;
+  font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif, georgia;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
