hash link and comming soon update

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -6,4 +6,5 @@ $white:#FFFFFF;
 $black:#000000;
 
 $color-background: #f1e8e8;
-$color-main-background:#cccff2;
+// $color-main-background:#cccff2;
+$color-main-background:#eeeff5;
