--- a/src/scss/pages/sideBar.scss
+++ b/src/scss/pages/sideBar.scss
@@ -46,6 +46,7 @@
     li {
         list-style-type: none;
         padding: 1rem;
+        border-bottom: 3px solid $wild-blue-yonder;
     }
     li a {
         text-decoration: none;
