--- a/src/scss/navigation/navigation.scss
+++ b/src/scss/navigation/navigation.scss
@@ -11,6 +11,8 @@
     color: $black;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
     font-weight: bold;
+    border-bottom: 3px solid $wild-blue-yonder;
+
 
     .brand-name {
         text-decoration: none;
