changing the back-ground color and adding the footer.

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,10 +1,22 @@
-$dark-slate-blue:  #474A8A;
-$tool-box: #787CB5;
-$wild-blue-yonder: #B0B3D6;
+// $dark-slate-blue:  #474A8A;
+// $tool-box: #787CB5;
+// $wild-blue-yonder: #B0B3D6;
+
+// $color-background: #f1e8e8;
+
+// $color-main-background:#cccff2;
+// $color-main-background:#eeeff5;
+
+
+$code-block: #379683;
+$border-color: #8ee4af;
 
 $white:#FFFFFF;
 $black:#000000;
+$text-color:#05386b;
 
-$color-background: #f1e8e8;
+$color-background: #5cdb95;
 // $color-main-background:#cccff2;
-$color-main-background:#eeeff5;
+$color-main-background:#5cdb95;
+
+$title:#edf5e1;
