--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  // background-color: $wild-blue-yonder;
+  // background-color: $border-color;
   background-color: $color-background;
   font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
