--- a/src/scss/pages/elements.scss
+++ b/src/scss/pages/elements.scss
@@ -20,7 +20,7 @@
 .display-lineBreak { 
     white-space: pre-line;
     .code-background{
-        background-color:$tool-box;
+        background-color:$code-block;
         padding: 15px;
         border-radius: 5px;
         color: $white;
