--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -5,9 +5,9 @@
     margin-left: 300px;
     width: 60%;
     height: 100%;
-    background-color: $color-main-background;
-    border-right: 3px solid $wild-blue-yonder;
-    border-left: 3px solid $wild-blue-yonder;
+    // background-color: $color-main-background;
+    // border-right: 3px solid $border-color;
+    // border-left: 3px solid $border-color;
     display: block;
     align-items: center;
     overflow-y: auto;
@@ -15,6 +15,9 @@
 
     .content-display{
         margin: 10px;
+        color: $text-color;
+        font-weight: 500;
+        padding-bottom: 60px
     }
 }
 
@@ -25,10 +28,13 @@
     display: block;
     position: absolute;
     overflow-y: auto;
-    border-left: 3px solid $wild-blue-yonder;
+    border-left: 3px solid $border-color;
     background-color: $color-main-background;
 
     .right-content-display{
-        margin: 10px;
+        margin: 10px 10px 0 10px;
+        color: $text-color;
+        font-weight: 500;
+        padding-bottom: 60px
     }
 }
