single page side bar update

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,13 +1,13 @@
+// Old colors
 // $dark-slate-blue:  #474A8A;
 // $tool-box: #787CB5;
 // $wild-blue-yonder: #B0B3D6;
-
 // $color-background: #f1e8e8;
-
 // $color-main-background:#cccff2;
 // $color-main-background:#eeeff5;
 
 
+// New colors
 $code-block: #379683;
 $border-color: #8ee4af;
 
