--- a/src/scss/navigation/navigation.scss
+++ b/src/scss/navigation/navigation.scss
@@ -16,10 +16,10 @@
 
     .brand-name {
         text-decoration: none;
-        font-size: 1.3rem;
         margin-left: 1rem;
         color: $title;
         font-size: 30px;
+        -webkit-text-stroke: 0.5px $text-color;
     }
 
     .navigation-menu {
