--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -23,7 +23,7 @@
 
 .right-content-wrapper {
     margin-left: 1180px;
-    width: 19%;
+    width: 18%;
     height: 100%;
     display: block;
     position: absolute;
@@ -32,9 +32,43 @@
     background-color: $color-main-background;
 
     .right-content-display{
-        margin: 10px 10px 0 10px;
+        // margin: 10px 10px 0 10px;
         color: $text-color;
         font-weight: 500;
-        padding-bottom: 60px
+        padding-bottom: 60px;
+        margin-right: auto;
+
+        // .headding{
+        //     text-align: center;
+        //     font-weight: 600;
+        //     border-bottom: 3px solid $border-color;
+        //     padding: 10px;
+        // }
+        
+        ul {
+            display: block;
+            padding: 0;
+            margin: 0;
+
+            li {
+                list-style-type: none;
+                padding: 1rem;
+                border-bottom: 3px solid $border-color;
+                // line-height: 15px;
+            }
+
+            li a {
+                text-decoration: none;
+                display: block;
+                width: 100%;
+                color: $text-color;
+                font-weight: 600;
+            }
+
+            li:hover {
+                background-color: $border-color;
+            }
+        }
+    
     }
 }
