--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -8,15 +8,41 @@
 
 
 // New colors
-$code-block: #379683;
-$border-color: #8ee4af;
+// $code-block: #379683;
+// $border-color: #8ee4af;
+
+// $white:#FFFFFF;
+// $black:#000000;
+// $text-color:#05386b;
+
+// $color-background: #5cdb95;
+// // $color-main-background:#cccff2;
+// $color-main-background:#5cdb95;
+
+// $title:#edf5e1;
+
+
+// style 2
+$code-block: #4E944F;
+$border-color: #83BD75;
 
 $white:#FFFFFF;
 $black:#000000;
-$text-color:#05386b;
+$text-color:#000000;
 
-$color-background: #5cdb95;
-// $color-main-background:#cccff2;
-$color-main-background:#5cdb95;
+$color-background: #E9EFC0;
+$color-main-background:#B4E197;
 
-$title:#edf5e1;
+$title:#4E944F;
+
+// $code-block: #4E944F;
+// $border-color: #DEB6AB;
+
+// $white:#FFFFFF;
+// $black:#000000;
+// $text-color:#F8ECD1;
+
+// $color-background: #AC7D88;
+// $color-main-background:#85586F;
+
+// $title:#DEB6AB;
