--- a/src/scss/navigation/navigation.scss
+++ b/src/scss/navigation/navigation.scss
@@ -7,7 +7,7 @@
     align-items: center;
     position: relative;
     padding: 0.5rem 0rem;
-    background-color: $color-main-background;
+    // background-color: $color-main-background;
     color: $text-color;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
     font-weight: bold;
@@ -19,7 +19,7 @@
         margin-left: 1rem;
         color: $title;
         font-size: 30px;
-        -webkit-text-stroke: 0.5px $text-color;
+        // -webkit-text-stroke: 0.5px $text-color;
     }
 
     .navigation-menu {
