color change and break section update.

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,14 +1,5 @@
-// Old colors
-// $dark-slate-blue:  #474A8A;
-// $tool-box: #787CB5;
-// $wild-blue-yonder: #B0B3D6;
-// $color-background: #f1e8e8;
-// $color-main-background:#cccff2;
-// $color-main-background:#eeeff5;
-
-
 // New colors
-// $code-block: #379683;
+// $box-border: #379683;
 // $border-color: #8ee4af;
 
 // $white:#FFFFFF;
@@ -20,29 +11,51 @@
 // $color-main-background:#5cdb95;
 
 // $title:#edf5e1;
+// $box-background: #5cdb95;
 
 
 // style 2
-$code-block: #4E944F;
-$border-color: #83BD75;
-
-$white:#FFFFFF;
-$black:#000000;
-$text-color:#000000;
-
-$color-background: #E9EFC0;
-$color-main-background:#B4E197;
-
-$title:#4E944F;
-
-// $code-block: #4E944F;
-// $border-color: #DEB6AB;
+// $box-border: #4E944F;
+// $border-color: #83BD75;
 
 // $white:#FFFFFF;
 // $black:#000000;
-// $text-color:#F8ECD1;
+// $text-color:#000000;
 
-// $color-background: #AC7D88;
-// $color-main-background:#85586F;
+// $color-background: #B4E197;
+// $color-main-background:#B4E197;
 
-// $title:#DEB6AB;
+// $title:#4E944F;
+// $box-background: #B4E197;
+
+
+
+// style 4
+// $box-border: #85586F;
+// $border-color: #F8ECD1;
+
+// $white:#FFFFFF;
+// $black:#000000;
+// $text-color:#85586F;
+
+// $color-background: #F8ECD1;
+// $color-main-background:#DEB6AB;
+
+// $title:#85586F;
+// $box-background: #DEB6AB;
+
+
+// style 5
+$white:#FFFFFF;
+$black:#000000;
+
+$color-background: #DBDFFD;
+$color-main-background:#9BA3EB;
+
+$title:#242F9B;
+$text-color:#242F9B;
+
+$border-color: #DBDFFD;
+
+$box-border: #242F9B;
+$box-background: #9BA3EB;
