--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,4 +1,6 @@
 @import './colors.scss';
+@import './components.scss';
+
 
 .footer{
     position: fixed;
@@ -10,7 +12,7 @@
     text-align: center;
     height: 20px;
     border-top: 3px solid $border-color;
-    font-weight: 500;
+    font-weight: $font-weight-500;
     padding:10px;
     box-shadow: 12px 20px 20px 20px rgb(9 9 9 / 23%);
 }
