--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -1,4 +1,5 @@
 @import '../colors.scss';
+@import '../components.scss';
 @import './elements.scss';
 
 .content-wrapper{
@@ -16,8 +17,8 @@
     .content-display{
         margin: 10px;
         color: $text-color;
-        font-weight: 500;
-        padding-bottom: 60px
+        font-weight: $font-weight-500;
+        padding-bottom: $padding-bottom-60;
     }
 }
 
@@ -34,13 +35,13 @@
     .right-content-display{
         // margin: 10px 10px 0 10px;
         color: $text-color;
-        font-weight: 500;
-        padding-bottom: 60px;
+        font-weight: $font-weight-500;
+        padding-bottom: $padding-bottom-60;
         margin-right: auto;
 
         // .headding{
         //     text-align: center;
-        //     font-weight: 600;
+        //     font-weight: $font-weight-600;
         //     border-bottom: 3px solid $border-color;
         //     padding: 10px;
         // }
@@ -62,7 +63,7 @@
                 display: block;
                 width: 100%;
                 color: $text-color;
-                font-weight: 600;
+                font-weight: $font-weight-600;
             }
 
             li:hover {
