--- a/src/scss/pages/sideBar.scss
+++ b/src/scss/pages/sideBar.scss
@@ -1,4 +1,5 @@
 @import '../colors.scss';
+@import '../components.scss';
 
 // this is the website which I found resources to develop the navbar - https://blog.logrocket.com/create-responsive-navbar-react-css/
 .sidebar {
@@ -13,14 +14,14 @@
     border-right: 3px solid $border-color;
     align-items: center;
     position: absolute;
-    padding-bottom: 60px;
+    padding-bottom: $padding-bottom-60;
 
     .brand-name {
         text-decoration: none;
         color: $text-color;
         font-size: 1.75rem;
         margin-left: 2.5rem;
-        font-weight: bold;
+        font-weight: $font-weight-bold;
         color: $title;
     }
 
@@ -57,7 +58,7 @@
         display: block;
         width: 100%;
         color: $text-color;
-        font-weight: 600;
+        font-weight: $font-weight-600;
     }
     
     li.active {
