--- a/src/scss/pages/welcome.scss
+++ b/src/scss/pages/welcome.scss
@@ -48,14 +48,14 @@
             // }
         }
 
-        .welcome-heading{
-            margin: 50px 0 20px 0;
+        // .welcome-heading{
+        //     margin: 50px 0 20px 0;
             // hr{
             //     border-top: 4px solid $box-background;
             //     border-radius: $border-radius-20;
             //     margin: 15px 0 0 0;
             // }
-        }
+        // }
     }
 
 }
