--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -15,6 +15,16 @@
     overflow-y: auto;
     position: absolute;
 
+    p{
+      line-height: 25px;
+    }
+
+    a{
+      text-decoration: none;
+      font-weight: $font-weight-700;
+      font-size: 18px;
+    }
+
     .content-display{
         margin: 10px;
         color: $text-color;
