adding the scroll bar

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,8 @@ body {
   font-family: $system-ui, $poppins, $roboto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 code {
