--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -61,3 +61,6 @@ $box-border: #242F9B;
 $box-background: #9BA3EB;
 
 $next-page-button: #9BA3EB;
+
+$scrollbar:#242F9B;
+$scrollbarTrackPiece :#9BA3EB;
