--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -26,63 +26,25 @@
     }
 
     .content-display{
-        margin: 10px;
+        margin: 10px 10px 40px 10px;
         color: $text-color;
         font-weight: $font-weight-500;
         padding-bottom: $padding-bottom-60;
     }
-
-    .welcome-animation{
-        text-align: center;
-        font-size: 50px;
-        font-weight: bold;
-        padding: 20px;
-
-        .inner-animation{
-            // background-color: red;
-            // height: 100px;
-            // width: 100px;
-            transform: rotate(0deg);
-            animation-name: heartbeat;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-          }
-          
-          .heart::before,
-          .heart::after {
-            content: "";
-            // background-color: red;
-            // height: 100px;
-            // width: 100px;
-            position: absolute;
-            border-radius: 50%;
-          }
-          
-          .heart::before {
-            top: -50px;
-            left: 0;
-          }
-          
-          .heart::after {
-            left: 50px;
-            top: 0;
-          }
-          
-          @keyframes heartbeat {
-            0% {
-              transform: scale(1) rotate(0);
-            }
-            20% {
-              transform: scale(1.25) rotate(0);
-            }
-            40% {
-              transform: scale(1.5) rotate(0);
-            }
-          }
-
-
-    }
 }
+
+.content-wrapper::-webkit-scrollbar {
+  width: 10px;
+}
+
+.content-wrapper::-webkit-scrollbar-thumb {
+  background-color: $scrollbar;
+  border-radius: 20px;
+}
+.content-wrapper::-webkit-scrollbar-track-piece {
+  background-color: $scrollbarTrackPiece;
+}
+
 
 .right-content-wrapper {
     margin-left: 1180px;
@@ -112,6 +74,7 @@
             display: block;
             padding: 0;
             margin: 0;
+            margin-bottom:100px;
 
             li {
                 list-style-type: none;
@@ -134,4 +97,8 @@
         }
     
     }
+}
+
+.right-content-wrapper::-webkit-scrollbar {
+  display: none;
 }
