--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -25,6 +25,14 @@
       font-size: 18px;
     }
 
+    ul{
+      margin: 25px 0 0 0;
+      li{
+          margin: 15px 0 0 0;
+      }
+    }
+
+
     .content-display{
         margin: 10px 10px 70px 10px;
         color: $text-color;
